--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
 node_modules/
 .env
+dist/
+build/
 temp/
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 .DS_Store
 Thumbs.db
 .vscode/
-.idea/
