--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "start": "ts-node src/index.ts",
+  "dev": "ts-node src/index.ts"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -18,5 +19,13 @@
     "express": "^5.2.1",
     "fluent-ffmpeg": "^2.1.3",
     "multer": "^2.0.2"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.6",
+    "@types/fluent-ffmpeg": "^2.1.28",
+    "@types/multer": "^2.0.0",
+    "@types/node": "^25.0.9",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
